# test-commitizen

./: .pre-commit-config.yaml  pyproject.toml
tests/: test_pilot.py
