[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Werbster Marques Teixeira <wmarques.88@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
